manifests/04-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"openshift-ai-prompt:ui","namespace":"ai-prompt"},"fieldPath":"spec.template.spec.containers[?(@.name==\"ui\")].image","pause":"false"},{"from":{"kind":"ImageStreamTag","name":"openshift-ai-prompt:server","namespace":"ai-prompt"},"fieldPath":"spec.template.spec.containers[?(@.name==\"server\")].image","pause":"false"}]'
  name: openshift-ai-prompt
  namespace: ai-prompt
  labels:
    app: openshift-ai-prompt
    app.kubernetes.io/component: openshift-ai-prompt
    app.kubernetes.io/instance: openshift-ai-prompt
    app.kubernetes.io/name: openshift-ai-prompt
    app.kubernetes.io/part-of: openshift-ai-prompt-app
    app.openshift.io/runtime-namespace: ai-prompt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openshift-ai-prompt
  template:
    metadata:
      labels:
        app: openshift-ai-prompt
        deployment: openshift-ai-prompt
    spec:
      containers:
        - name: ui
          image: ' '
          ports:
            - containerPort: 8080
              protocol: TCP
        - name: server
          image: ' '
          ports:
            - containerPort: 8081
              protocol: TCP
      restartPolicy: Always
  strategy:
    type: RollingUpdate
